refact: carrega somente os pets que estao disponiveis para adocao ao inves de carregar todos e depois filtrar os que estao disponiveis(melhora a performance da aplicacao)